# fabik

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  debug_config.py  debug_server.py  pyproject.toml  verify_docs.py
.cursor/rules/: 01-project-structure.mdc  02-python-style.mdc  03-dependency-management.mdc  project-structure.mdc  pytest.mdc  python-style.mdc  typer.mdc
.github/workflows/: docs.yml
.qoder/rules/: project-structure.md  pytest.md  python-style.md  typer.md
.rules/: project-structure.mdc  pytest.mdc  python-style.mdc
.specs/: CODE_STRUCTURE.md  DOCUMENTATION.md  MODULE_FUNCTIONALITY.md  PROJECT_ARCHITECTURE.md  TECHNOLOGY_STACK.md  make-fabik-env.md  make-output-file.md
docs/: Makefile  README.md  SETUP_COMPLETE.md  command.rst  conf.py  configuration.rst  development.rst  github-actions-example.yml  index.rst  reference.rst  requirements.txt  usage.rst
docs/_build/html/: .buildinfo  command.html  configuration.html  development.html  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: command.doctree  configuration.doctree  development.doctree  environment.pickle  index.doctree  reference.doctree  usage.doctree
docs/_build/html/_sources/: configuration.rst.txt  reference.rst.txt  usage.rst.txt
fabik/: __init__.py  __main__.py  cli.py  cmd.py  conf.py  error.py  http.py  log.py  tpl.py
fabik/cmd/: __init__.py  conf.py  gen.py  main.py  server.py  venv.py
fabik/conf/: __init__.py  processor.py  storage.py
fabik/deploy/: __init__.py  gunicorn.py  tmux.py  uwsgi.py
fabik/util/: __init__.py  date.py  encrypt.py  func.py  gen.py  jinja_filter.py
samples/: .fabik.env  fabik.toml
tests/: __init__.py  conftest.py  fabik.toml  test_cmd.py  test_conf.py  test_conf_commands.py  test_gen.py  test_gen_requirements.py  test_main.py  test_server.py
