[build-system]
requires = ["flit_core >=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabik"
authors = [{ name = "zrong", email = "zrongzrong@gmail.com" }]
license = { file = "LICENSE" }
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["development", "zrong", "typer", "cli", "tool"]
classifiers = [
    'Development Status :: 4 - Beta',

    'Intended Audience :: Developers',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Topic :: Internet :: WWW/HTTP :: Site Management',
    'Topic :: Utilities',
    "Topic :: Software Development :: Libraries :: Application Frameworks",

    'License :: OSI Approved :: MIT License',

    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.13',
]
dependencies = [
    "click>=8.2.1",
    "cryptography>=45.0.5",
    "fabric>=3.2.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "tomli-w>=1.2.0",
    "typer-slim[standard]>=0.16.0",
]

[dependency-groups]
dev = [
    "flit>=3.12.0",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]
doc = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "recommonmark>=0.7.1",
    "rstcheck>=6.0.0",
]

[project.urls]
Home = "https://github.com/zrong/fabik"
Documentation = "https://fabik.rtfd.io/"
Repository = "https://github.com/zrong/fabik"

[project.scripts]
fabik = "fabik.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
